# UltraNerfPlugin

./: .gitignore  CMakeLists.txt  Readme.md  UltraNerfAlgorithm.cpp  UltraNerfAlgorithm.h  UltraNerfController.cpp  UltraNerfController.h  UltraNerfController.ui  UltraNerfFactory.cpp  UltraNerfFactory.h  UltraNerfInferenceAlgorithm.cpp  UltraNerfInferenceAlgorithm.h  UltraNerfInferenceController.cpp  UltraNerfInferenceController.h  UltraNerfInferenceController.ui  UltraNerfPlugin.cpp  UltraNerfTrainingAlgorithm.h  UltraNerfTrainingController.cpp  UltraNerfTrainingController.h  UltraNerfTrainingController.ui
UltraNerfTorch/: CMakeLists.txt
UltraNerfTorch/include/: NeRFModel.h  NeRFRenderer.h  NeRFUtils.h  UltraNeRFRenderer.h
UltraNerfTorch/src/: NeRFModel.cpp  NeRFRenderer.cpp  NeRFUtils.cpp  UltraNeRFRenderer.cpp  main.cpp
include/: MyCustomGlObject.h  UltraNerfInferenceAlgorithm.h  UltraNerfInferenceController.h  UltraNerfPlugin.h
src/: MyCustomGlObject.cpp  UltraNerfInferenceAlgorithm.cpp  UltraNerfInferenceController.cpp  UltraNerfInferenceController.ui  UltraNerfTrainingAlgorithm.cpp
